--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Wordle
 excludes=
+file.reference.sqlite-jdbc-3.36.0.3.jar=D:\\Silviotron\\Descargas\\sqlite-jdbc-3.36.0.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.AAA_sql.classpath}:\
+    ${file.reference.sqlite-jdbc-3.36.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Wordle
-main.class=wordle.MainWordle
+main.class=org.daw1.silvio.wordle.MainWordle
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
