--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Wordle
-main.class=org.daw1.silvio.wordle.MainWordle
+main.class=org.daw1.silvio.wordleMain.MainWordle
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
